tests/NormalTests/paczka1/small_fuzzy/95350318.err
Error in line 1: dfYZbcWZk A417 74,6
Error in line 2: wbMS A531 87,3
Error in line 7: Zm7Fi A531 900
